Finish first recipe page

--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -8,5 +8,34 @@
 </head>
 <body>
     <h1>Sarmale</h1>
-</body>
+    <img src="/home/iamaxi/repos/odin-recipes/images/sarmale.jpg" width="600px" height="400px">
+    <h2>Description</h2>
+    <section>
+            <h3>Time of preparation</h3>
+        <ul>
+            <li>45 min</li>        
+        </ul>
+
+            <h3>Ingredients</h3>
+        <ul>
+            <li>1-2 pickled cabbage</li>
+            <li>1kg minced pork</li>
+            <li>1 cup of rice(4-5 tablespoons</li>
+            <li>1-2 medium onions</li>
+            <li>200g tomato paste</li>
+            <li>salt,pepper,thyme,bay leaf,paprika,peppercorns</li>
+            <li>2-3 tablespoons of oil</li>
+        </ul>
+
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Cut the cabbage into sheets, wash it, leave it to desalt and dry, if necessary, then clean it from the spines and place the sheets that look best on a plate. Cabbage leaves that are not suitable for stuffing are finely chopped.</li>
+            <li>Meanwhile, fry the finely chopped onion in a hot pan with oil, add the rice washed well in warm water and drain, fry together for 1-2 minutes, stirring continuously. Then add 2-3 tablespoons of tomato paste and extinguish everything with 1 glass of water. Now let it simmer uncovered until the rice begins to swell and the sauce begins to reduce. Let it cool, and then mix this composition well with the minced meat, salt, pepper, thyme, paprika.Sprinkle chopped cabbage on top. Pour 2-3 glasses of heated water, cover the saucepan with a suitable lid and put it to boil on low heat. The sarmales in sauerkraut leaves are left for a few hours, turning the pan from time to time, so that the sarmales do not stick to the bottom and smoke.</li>
+            <li>Fill each sheet of cabbage with a teaspoon of the composition and gently roll the sarmales, so that they do not fall apart when cooked.</li>
+            <li>The finely chopped cabbage is mixed well with a spoonful of oil, with the rest of the tomato paste and the spices.</li>
+            <li>In a saucepan with a thicker bottom, first place a layer of chopped cabbage, then arrange the sarmales in layers, leaving a circular void in the middle, which is filled with chopped cabbage.</li>
+            <li>When they are cooked, put the sausages in the oven to brown nicely.</li>
+        </ol>
+    </section>
 </html>
