Change info in the STEPS section

--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -30,12 +30,12 @@
 
         <h3>Steps</h3>
         <ol>
-            <li>Cut the cabbage into sheets, wash it, leave it to desalt and dry, if necessary, then clean it from the spines and place the sheets that look best on a plate. Cabbage leaves that are not suitable for stuffing are finely chopped.</li>
-            <li>Meanwhile, fry the finely chopped onion in a hot pan with oil, add the rice washed well in warm water and drain, fry together for 1-2 minutes, stirring continuously. Then add 2-3 tablespoons of tomato paste and extinguish everything with 1 glass of water. Now let it simmer uncovered until the rice begins to swell and the sauce begins to reduce. Let it cool, and then mix this composition well with the minced meat, salt, pepper, thyme, paprika.Sprinkle chopped cabbage on top. Pour 2-3 glasses of heated water, cover the saucepan with a suitable lid and put it to boil on low heat. The sarmales in sauerkraut leaves are left for a few hours, turning the pan from time to time, so that the sarmales do not stick to the bottom and smoke.</li>
-            <li>Fill each sheet of cabbage with a teaspoon of the composition and gently roll the sarmales, so that they do not fall apart when cooked.</li>
-            <li>The finely chopped cabbage is mixed well with a spoonful of oil, with the rest of the tomato paste and the spices.</li>
-            <li>In a saucepan with a thicker bottom, first place a layer of chopped cabbage, then arrange the sarmales in layers, leaving a circular void in the middle, which is filled with chopped cabbage.</li>
-            <li>When they are cooked, put the sausages in the oven to brown nicely.</li>
+            <li>Clean the cabbage from the outer leaves and spines and choose the sheets in which the meat will be wrapped.</li> 
+            <li>Clean and wash the onion, then finely chop it. Put it in a saucepan with oil and a little water and leave it until it turns golden.</li> 
+            <li>Mix the fried and cooled onion with the meat, pepper, salt and rice, which was also boiled and cooled, in a bowl.</li> 
+            <li>Take the composition the size of a walnut and put it on a cabbage leaf, which is rolled with the edges inside.</li> 
+            <li>Stop the smaller cabbage leaves and chop the scales to form a layer for the sarmales.</li> 
+            <li>In a tall saucepan, place the sarmales and ribs on top of the chopped cabbage, and another layer of chopped cabbage on top. Pour the water-soaked broth over them, put the bay leaves and a few peppercorns. Leave to boil, on low heat, for 2 hours. From time to time, add water to prevent sticking.</li> 
         </ol>
     </section>
 </html>
