--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/sarmale.html">Sarmale</a>
+    <a href="recipes/chestnut_soup.html">Chestnut Soup</a>
 </body>
 </html>
