--- a/recipes/chestnut_soup.html
+++ b/recipes/chestnut_soup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chestnut Soup</h1>
-    <img src="/home/iamaxi/repos/odin-recipes/images/chestnut_soup.jpg" width="600px" height="400px">
+    <img src="/home/iamaxi/repos/odin-recipes/images/chestnut_soup.jpg" alt="image of chestnut soup" width="600px" height="400px">
     <h2>Description</h2>
     <section>
         <h3>Preparation Times</h3>
