--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Sarmale</h1>
-    <img src="/home/iamaxi/repos/odin-recipes/images/sarmale.jpg" width="600px" height="400px">
+    <img src="/home/iamaxi/repos/odin-recipes/images/sarmale.jpg" alt="image of sarmale" width="600px" height="400px">
     <h2>Description</h2>
     <section>
             <h3>Time of preparation</h3>
