Add unordered list to the index recipes links

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <a href="recipes/sarmale.html">Sarmale</a>
-    <a href="recipes/chestnut_soup.html">Chestnut Soup</a>
-    <a href="recipes/pumpkin_cake.html>">Pumpkin Cake</a>
+    <li><a href="recipes/sarmale.html">Sarmale</a></li>
+    <li><a href="recipes/chestnut_soup.html">Chestnut Soup</a></li>
+    <li><a href="recipes/pumpkin_cake.html>">Pumpkin Cake</a></li>
     </ul>
 </body>
 </html>
