Repair pumpkin.cake.html link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
     <li><a href="recipes/sarmale.html">Sarmale</a></li>
     <li><a href="recipes/chestnut_soup.html">Chestnut Soup</a></li>
-    <li><a href="recipes/pumpkin_cake.html>">Pumpkin Cake</a></li>
+    <li><a href="recipes/pumpkin_cake.html">Pumpkin Cake</a></li>
     </ul>
 </body>
 </html>
