--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="content">
+    <h1 class="title">ROMANIAN RECIPES</h1>
     <ul>
-    <li><a href="recipes/sarmale.html">Sarmale</a></li>
-    <li><a href="recipes/chestnut_soup.html">Chestnut Soup</a></li>
-    <li><a href="recipes/pumpkin_cake.html">Pumpkin Cake</a></li>
+    <li class="links"><a href="recipes/sarmale.html">Sarmale</a></li>
+    <li class="links"><a href="recipes/chestnut_soup.html">Chestnut Soup</a></li>
+    <li class="links"><a href="recipes/pumpkin_cake.html">Pumpkin Cake</a></li>
     </ul>
+    </div>
 </body>
 </html>
