--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="content">
     <h1 class="title">ROMANIAN RECIPES</h1>
-    <ul>
-    <li class="links"><a href="recipes/sarmale.html">Sarmale</a></li>
-    <li class="links"><a href="recipes/chestnut_soup.html">Chestnut Soup</a></li>
-    <li class="links"><a href="recipes/pumpkin_cake.html">Pumpkin Cake</a></li>
-    </ul>
+    <div class="recipes">
+        <ul id="horizontal-list">
+            <li><a href="/recipes/sarmale.html"><img class="images"src="/images/sarmale.jpg"></a></li>
+            <li><a href="/recipes/chestnut_soup.html"><img class="images"src="/images/chestnut_soup.jpg"></a></li></li>
+            <li><a href="/recipes/pumpkin_cake.html"><img class="images"src="/images/pumpkin_cake.jpg"></a></li></li>
+        </ul>
     </div>
-</body>
+    </body>
 </html>
