--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="content">
+        <div class="title-box">
     <h1 class="title">ROMANIAN RECIPES</h1>
+        </div>
     <div class="recipes">
         <ul id="horizontal-list">
             <li><a href="/recipes/sarmale.html"><img class="images"src="/images/sarmale.jpg"></a></li>
