--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Romanian Christmas Recipe</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <!-- The content of the page  -->
     <div class="content">
+        <!-- The page tilte  -->
         <div class="title-box">
     <h1 class="title">ROMANIAN RECIPES</h1>
         </div>
+        <!-- The recipes  -->
     <div class="recipes">
         <ul id="horizontal-list">
             <li><a href="/recipes/sarmale.html"><img class="images"src="/images/sarmale.jpg"></a></li>
