--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarmale</title>
+    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <h1>Sarmale</h1>
-    <img src="/home/iamaxi/repos/odin-recipes/images/sarmale.jpg" alt="image of sarmale" width="600px" height="400px">
-    <h2>Description</h2>
-    <section>
+    <!-- The recipe title  -->
+    <div class="content">
+    <div class="title-box">
+            <h1 class="title">SARMALE</h1>
+    </div>
+    <!-- The recipe image -->
+    <div class="recipes">
+         <img class="images" src="/images/sarmale.jpg" alt="image of sarmale">
+    </div>
+    <!-- Create the recipe description  -->
+    <div class="recipe-description">
+        <a href="/index.html"><span class="material-symbols-outlined">
+            home
+            </span>
+            </a>
+                <h2>Description</h2>
             <h3>Time of preparation</h3>
         <ul>
             <li>45 min</li>        
@@ -37,5 +51,8 @@
             <li>Stop the smaller cabbage leaves and chop the scales to form a layer for the sarmales.</li> 
             <li>In a tall saucepan, place the sarmales and ribs on top of the chopped cabbage, and another layer of chopped cabbage on top. Pour the water-soaked broth over them, put the bay leaves and a few peppercorns. Leave to boil, on low heat, for 2 hours. From time to time, add water to prevent sticking.</li> 
         </ol>
-    </section>
+    </div>
+    
+    </div>
+    
 </html>
