Add classes and stylesheet

--- a/recipes/chestnut_soup.html
+++ b/recipes/chestnut_soup.html
@@ -5,70 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chestnut Soup</title>
+    <link rel="stylesheet" href="style2.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
-    <h1>Chestnut Soup</h1>
-    <img
-      src="/home/iamaxi/repos/odin-recipes/images/chestnut_soup.jpg"
-      alt="image of chestnut soup"
-      width="600px"
-      height="400px"
-    />
-    <h2>Description</h2>
-    <section>
-      <h3>Preparation Times</h3>
-      <ul>
-        <li>Preparation Time: 15 min</li>
-        <li>Cooking Time: 30 min</li>
-        <li>Ready in: 45 min</li>
-      </ul>
-      <h3>Ingredients</h3>
-      <ul>
-        <li>250g chestnuts</li>
-        <li>1 onion</li>
-        <li>1 leek</li>
-        <li>1 clove of garlic</li>
-        <li>1 glass of chicken soup or vegetable soup</li>
-        <li>1 glass of water</li>
-        <li>50ml cooking cream</li>
-        <li>oil</li>
-        <li>salt</li>
-        <li>pepper</li>
-      </ul>
-      <h3>STEPS</h3>
-      <ol>
-        <li>Chestnuts are grown cross-wise so that they can cook faster.</li>
-        <li>
-          Boil water in a saucepan. When the water starts to boil, add the
-          chestnuts. Let it boil for 15 minutes. After they are boiled, leave to
-          cool.
-        </li>
-        <li>
-          Finely chop the onion and leek. In another saucepan with a little oil,
-          fry until soft. Add the chopped garlic and cook a little more.
-        </li>
-        <li>
-          The chestnuts are peeled and their core is added over the vegetables
-          in the pan. Sauté.
-        </li>
-        <li>
-          Add the soup and water. Season with salt and pepper. Let it cook for
-          about 15 minutes.
-        </li>
-        <li>
-          The contents of the saucepan are mashed with a blender until the
-          consistency of a cream is obtained.
-        </li>
-        <li>
-          You can add more lukewarm water if the chestnut soup is not liquid
-          enough.
-        </li>
-        <li>
-          Put the saucepan back on the heat and add the cooking cream and
-          (optionally) thyme.
-        </li>
-        <li>Chestnut soup is served warm.</li>
-      </ol>
-    </section>
+    <div class="content">
+      <!-- The recipe title  -->
+      <div class="title-box">
+        <h1 class="title">CHESTNUT SOUP</h1>
+      </div>
+      <!-- The recipe image  -->
+      <div class="recipes">
+        <img
+          class="images"
+          src="/images/chestnut_soup.jpg"
+          alt="image of chestnut soup"
+          height="400px"
+          width="600px"
+        />
+      </div>
+      <!-- Create the recipe description -->
+      <div class="recipe-description">
+        <a href="/index.html"
+          ><span class="material-symbols-outlined"> home </span>
+        </a>
+        <h2>Description</h2>
+        <h3>Preparation Times</h3>
+        <ul>
+          <li>Preparation Time: 15 min</li>
+          <li>Cooking Time: 30 min</li>
+          <li>Ready in: 45 min</li>
+        </ul>
+        <h3>Ingredients</h3>
+        <ul>
+          <li>250g chestnuts</li>
+          <li>1 onion</li>
+          <li>1 leek</li>
+          <li>1 clove of garlic</li>
+          <li>1 glass of chicken soup or vegetable soup</li>
+          <li>1 glass of water</li>
+          <li>50ml cooking cream</li>
+          <li>oil</li>
+          <li>salt</li>
+          <li>pepper</li>
+        </ul>
+        <h3>STEPS</h3>
+        <ol>
+          <li>Chestnuts are grown cross-wise so that they can cook faster.</li>
+          <li>
+            Boil water in a saucepan. When the water starts to boil, add the
+            chestnuts. Let it boil for 15 minutes. After they are boiled, leave
+            to cool.
+          </li>
+          <li>
+            Finely chop the onion and leek. In another saucepan with a little
+            oil, fry until soft. Add the chopped garlic and cook a little more.
+          </li>
+          <li>
+            The chestnuts are peeled and their core is added over the vegetables
+            in the pan. Sauté.
+          </li>
+          <li>
+            Add the soup and water. Season with salt and pepper. Let it cook for
+            about 15 minutes.
+          </li>
+          <li>
+            The contents of the saucepan are mashed with a blender until the
+            consistency of a cream is obtained.
+          </li>
+          <li>
+            You can add more lukewarm water if the chestnut soup is not liquid
+            enough.
+          </li>
+          <li>
+            Put the saucepan back on the heat and add the cooking cream and
+            (optionally) thyme.
+          </li>
+          <li>Chestnut soup is served warm.</li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
