ADd classes and stylesheet

--- a/recipes/pumpkin_cake.html
+++ b/recipes/pumpkin_cake.html
@@ -4,67 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style2.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Pumpkin cake</title>
   </head>
   <body>
-    <h1>Pumpkin cake</h1>
-    <img
-      src="/home/iamaxi/repos/odin-recipes/images/pumpkin_cake.jpg"
-      alt="a pumpkin cake"
-      width="600px"
-      height="400px"
-    />
-    <h2>Description</h2>
-    <section>
-      s
-      <h3>Preparation Times</h3>
-      <ul>
-        <li>Preparation Time: 20 min</li>
-        <li>Cooking Time: 45 min</li>
-        <li>Ready in: 65 min</li>
-      </ul>
+    <div class="content">
+      <!-- The recipe title  -->
+      <div class="title-box">
+        <h1 class="title">PUMPKING CAKE</h1>
+      </div>
+      <!-- The recipe image -->
+      <div class="recipes">
+        <img
+          class="images"
+          src="/images/pumpkin_cake.jpg"
+          alt="a pumpkin cake"
+          width="600px"
+          height="400px"
+        />
+      </div>
+      <!-- Create the recipe description  -->
+      <div class="recipe-description">
+        <a href="/index.html"
+          ><span class="material-symbols-outlined"> home </span>
+        </a>
+        <h2>Description</h2>
 
-      <h3>Ingredients</h3>
-      <ul>
-        <li>2 eggs</li>
-        <li>200g flour</li>
-        <li>200g cooked pumpkin</li>
-        <li>1 teaspoon baking powder</li>
-        <li>a pinch of sodium bicarbonate</li>
-        <li>80g of sugar</li>
-        <li>1 teaspoon vanilla essence</li>
-        <li>80 ml of oil</li>
-        <li>75 ml of milk</li>
-        <li>orange peel</li>
-      </ul>
+        <h3>Preparation Times</h3>
+        <ul>
+          <li>Preparation Time: 20 min</li>
+          <li>Cooking Time: 45 min</li>
+          <li>Ready in: 65 min</li>
+        </ul>
 
-      <h3>STEPS</h3>
-      <ol>
-        <li>
-          The pumpkin used in this recipe must be prepared in advance, either
-          boiled or baked. Mash the obtained pumpkin until a fine puree is
-          obtained.
-        </li>
-        <li>
-          Preheat the oven to 180 degrees Celsius. Cover the round tray or cake
-          form with a baking sheet.
-        </li>
-        <li>
-          In a bowl mix the eggs, vanilla essence, orange peel. Mix until a
-          whitish composition is obtained that doubles in volume.
-        </li>
-        <li>Add the oil, milk and cold pumpkin puree. It homogenizes.</li>
-        <li>
-          Mix the flour, baking powder and baking soda separately. This mixture
-          is gradually added over the egg mixture. The resulting dough should
-          have the consistency of a slightly thicker pancake batter.
-        </li>
-        <li>
-          The cake dough is poured into the form and baked for 40-45 minutes at
-          180 degrees Celsius or until it passes the toothpick test.
-        </li>
-        <li>The pumpkin cake is served after it has cooled.</li>
-      </ol>
-    </section>
+        <h3>Ingredients</h3>
+        <ul>
+          <li>2 eggs</li>
+          <li>200g flour</li>
+          <li>200g cooked pumpkin</li>
+          <li>1 teaspoon baking powder</li>
+          <li>a pinch of sodium bicarbonate</li>
+          <li>80g of sugar</li>
+          <li>1 teaspoon vanilla essence</li>
+          <li>80 ml of oil</li>
+          <li>75 ml of milk</li>
+          <li>orange peel</li>
+        </ul>
+
+        <h3>STEPS</h3>
+        <ol>
+          <li>
+            The pumpkin used in this recipe must be prepared in advance, either
+            boiled or baked. Mash the obtained pumpkin until a fine puree is
+            obtained.
+          </li>
+          <li>
+            Preheat the oven to 180 degrees Celsius. Cover the round tray or
+            cake form with a baking sheet.
+          </li>
+          <li>
+            In a bowl mix the eggs, vanilla essence, orange peel. Mix until a
+            whitish composition is obtained that doubles in volume.
+          </li>
+          <li>Add the oil, milk and cold pumpkin puree. It homogenizes.</li>
+          <li>
+            Mix the flour, baking powder and baking soda separately. This
+            mixture is gradually added over the egg mixture. The resulting dough
+            should have the consistency of a slightly thicker pancake batter.
+          </li>
+          <li>
+            The cake dough is poured into the form and baked for 40-45 minutes
+            at 180 degrees Celsius or until it passes the toothpick test.
+          </li>
+          <li>The pumpkin cake is served after it has cooled.</li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
