Changing incorrect url paths

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- The recipes  -->
     <div class="recipes">
         <ul id="horizontal-list">
-            <li><a href="/recipes/sarmale.html"><img class="images"src="/images/sarmale.jpg"></a></li>
-            <li><a href="/recipes/chestnut_soup.html"><img class="images"src="/images/chestnut_soup.jpg"></a></li></li>
-            <li><a href="/recipes/pumpkin_cake.html"><img class="images"src="/images/pumpkin_cake.jpg"></a></li></li>
+            <li><a href="recipes/sarmale.html"><img class="images"src="images/sarmale.jpg"></a></li>
+            <li><a href="recipes/chestnut_soup.html"><img class="images"src="images/chestnut_soup.jpg"></a></li></li>
+            <li><a href="recipes/pumpkin_cake.html"><img class="images"src="images/pumpkin_cake.jpg"></a></li></li>
         </ul>
     </div>
     </body>
