--- a/recipes/chestnut_soup.html
+++ b/recipes/chestnut_soup.html
@@ -21,7 +21,7 @@
       <div class="recipes">
         <img
           class="images"
-          src="/images/chestnut_soup.jpg"
+          src="/home/iamaxi/repos/odin-recipes/images/chestnut_soup.jpg"
           alt="image of chestnut soup"
           height="400px"
           width="600px"
@@ -29,7 +29,7 @@
       </div>
       <!-- Create the recipe description -->
       <div class="recipe-description">
-        <a href="/index.html"
+        <a href="/home/iamaxi/repos/odin-recipes/index.html"
           ><span class="material-symbols-outlined"> home </span>
         </a>
         <h2>Description</h2>
