--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -16,11 +16,11 @@
     </div>
     <!-- The recipe image -->
     <div class="recipes">
-         <img class="images" src="/images/sarmale.jpg" alt="image of sarmale">
+         <img class="images" src="/home/iamaxi/repos/odin-recipes/images/sarmale.jpg" alt="image of sarmale">
     </div>
     <!-- Create the recipe description  -->
     <div class="recipe-description">
-        <a href="/index.html"><span class="material-symbols-outlined">
+        <a href="/home/iamaxi/repos/odin-recipes/index.html"><span class="material-symbols-outlined">
             home
             </span>
             </a>
