--- a/recipes/chestnut_soup.html
+++ b/recipes/chestnut_soup.html
@@ -27,7 +27,7 @@
           width="600px"
         />
       </div>
-      <!-- Create the recipe description -->
+      <!-- Create the recipe description content -->
       <div class="recipe-description">
         <a href="/home/iamaxi/repos/odin-recipes/index.html"
           ><span class="material-symbols-outlined"> home </span>
