--- a/recipes/pumpkin_cake.html
+++ b/recipes/pumpkin_cake.html
@@ -21,7 +21,7 @@
       <div class="recipes">
         <img
           class="images"
-          src="/home/iamaxi/repos/ROMANIAN-RECIPES/images/pumpkin_cake.jpg"
+          src="../images/pumpkin_cake.jpg"
           alt="a pumpkin cake"
           width="600px"
           height="400px"
@@ -29,7 +29,7 @@
       </div>
       <!-- Create the recipe description  -->
       <div class="recipe-description">
-        <a href="/home/iamaxi/repos/ROMANIAN-RECIPES/index.html"
+        <a href="/index.html"
           ><span class="material-symbols-outlined"> home </span>
         </a>
         <h2>Description</h2>
