--- a/recipes/pumpkin_cake.html
+++ b/recipes/pumpkin_cake.html
@@ -29,7 +29,7 @@
       </div>
       <!-- Create the recipe description  -->
       <div class="recipe-description">
-        <a href="/index.html"
+        <a href="/home/iamaxi/repos/ROMANIAN-RECIPES/index.html"
           ><span class="material-symbols-outlined"> home </span>
         </a>
         <h2>Description</h2>
