--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -20,7 +20,7 @@
     </div>
     <!-- Create the recipe description  -->
     <div class="recipe-description">
-        <a href="/index.html"><span class="material-symbols-outlined">
+        <a href="/home/iamaxi/repos/ROMANIAN-RECIPES/index.html"><span class="material-symbols-outlined">
             home
             </span>
             </a>
