Fix index.html path

--- a/recipes/chestnut_soup.html
+++ b/recipes/chestnut_soup.html
@@ -29,7 +29,7 @@
       </div>
       <!-- Create the recipe description content -->
       <div class="recipe-description">
-        <a href="/ROMANIAN-RECIPES/index.html"
+        <a href="../index.html"
           ><span class="material-symbols-outlined"> home </span>
         </a>
         <h2>Description</h2>
