--- a/recipes/sarmale.html
+++ b/recipes/sarmale.html
@@ -7,6 +7,8 @@
     <title>Sarmale</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+
 </head>
 <body>
     <!-- The recipe title  -->
